update phase construction from fraction to depth